--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,11 @@
+<ion-header>
+  <ion-navbar color="dark">
+    <ion-title>Login</ion-title>
+  </ion-navbar>
+</ion-header>
 <ion-content class="login-content" padding>
   <ion-row class="logo-row">
     <ion-col></ion-col>
-    <h3>Fit2Me</h3>
     <ion-col></ion-col>
   </ion-row>
   <div class="login-box">
@@ -25,7 +29,7 @@
       <ion-row>
         <ion-col class="signup-col">
           <button ion-button class="submit-btn" full type="submit" [disabled]="!registerForm.form.valid">Login</button>
-          <button ion-button class="register-btn" block clear (click)="createAccount()">Create New Account</button>
+          <button ion-button class="register-btn" block clear (click)="createAccount()">Create Account</button>
         </ion-col>
       </ion-row>
       
