Templated the workout page in HTML

--- a/src/pages/workouts/workouts.html
+++ b/src/pages/workouts/workouts.html
@@ -7,12 +7,32 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>workouts</ion-title>
+    <ion-title>Workouts</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+	<h3>Favourite Workouts</h3>
+	<p>Populate the top 3 workouts here:</p>
+	<ion-item no-lines>1</ion-item>
+	<ion-item no-lines>2</ion-item>
+	<ion-item no-lines>3</ion-item>
+
+	<h3>Recent Workouts</h3>
+	<p>Populate the 3 last workouts completed here:</p>
+	<ion-item no-lines>1</ion-item>
+	<ion-item no-lines>2</ion-item>
+	<ion-item no-lines>3</ion-item>
+
+	<ion-item no-lines>
+		<button ion-button>Create New Workout</button>
+	</ion-item>
+	<ion-item no-lines>
+		<button ion-button>View Sample Workouts</button>
+	</ion-item>
+
 
 </ion-content>
