--- a/src/pages/workouts/workouts.html
+++ b/src/pages/workouts/workouts.html
@@ -15,17 +15,21 @@
 
 <ion-content padding>
 
-	<h3>Favourite Workouts</h3>
-	<p>Populate the top 3 workouts here:</p>
-	<ion-item no-lines>1</ion-item>
-	<ion-item no-lines>2</ion-item>
-	<ion-item no-lines>3</ion-item>
+	<h3>My Workout Plan</h3>
+	<ion-item no-lines>
+		<button ion-button>View Plan</button>
+	</ion-item>	
 
-	<h3>Recent Workouts</h3>
-	<p>Populate the 3 last workouts completed here:</p>
-	<ion-item no-lines>1</ion-item>
-	<ion-item no-lines>2</ion-item>
-	<ion-item no-lines>3</ion-item>
+
+	<h3>Other</h3>
+
+	<ion-item no-lines>
+		<button ion-button>Complete Workout</button>
+	</ion-item>
+
+	<ion-item no-lines>
+		<button ion-button>Log Workout</button>
+	</ion-item>
 
 	<ion-item no-lines>
 		<button ion-button>Create New Workout</button>
@@ -33,6 +37,17 @@
 	<ion-item no-lines>
 		<button ion-button>View Sample Workouts</button>
 	</ion-item>
+
+	<h3>Your Favourite Workouts</h3>
+	<p>Populate the top workouts here:</p>
+	<ion-item no-lines>1</ion-item>
+
+	<h3>Your Recent Workouts</h3>
+	<p>Populate the last workouts completed here:</p>
+	<ion-item no-lines>1</ion-item>
+
+
+
 
 
 </ion-content>
